<resources>
    <string name="app_name">MarritLeenstra-pset62</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="auth_succes">Created user</string>
    <string name="title_activity_login">Sign in</string>
    <string name="notification">Reminder</string>

    <!-- Strings related to home fragment -->
    <string name="question">Did you eat vegetarian today?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="clicked_yes">Good job! Another vegetarian day!</string>
    <string name="clicked_no">Don\'t worry! Try again tomorrow!</string>
    <string name="daily_recommendations">Your daily recipe recommendations!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_displayname">Display name (optional)</string>
    <string name="prompt_password_signin">Password</string>
    <string name="prompt_password">Password (minimal 6 characters)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_repeat">The passwords are not the same</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account">I don\'t have an account yet!</string>
    <string name="welcome_register">Register as a new user</string>
    <string name="repeat_password">Repeat password</string>
    <string name="forgot_password">Oops... I forgot my password.</string>
    <string name="error_user_exists">Email is already registered</string>
    <string name="loading_data">Loading...</string>


    <!--Strings related to bottom navigation-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_signin">SignInActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">Username</string>
    <string name="title_community">Community</string>

    <!--Strings related to user fragment layout-->
    <string name="run_streak">Current Run streak</string>
    <string name="days">days</string>
    <string name="total_days">Total days eaten vegetarian</string>
    <string name="total_CO2">Total CO2 emission avoided (kg)</string>
    <string name="total_animals">Total animals saved (chicken)</string>
    <string name="chicken">chickens</string>
    <string name="sheep">sheep</string>
    <string name="pigs">pigs</string>
    <string name="calves">calves</string>
    <string name="horses">horses</string>
    <string name="cows">cows</string>
    <string name="kg">kg</string>


    <!--Strings related to community fragment layout-->
    <string name="community">This is how the community is keeping up!</string>
    <string name="total_participants">Total participants</string>
    <string name="total_participants_today">Total people eating vegetarian today</string>

    <!--Strings related to forgot password activity layout-->
    <string name="new_password_form">Reset your password</string>
    <string name="send">Send password reset email</string>
    <string name="send_email">Sent password reset email</string>
    <string name="title_activity_settings">Settings</string>

    <!--Strings related to settings-->
    <string name="change_email">Change email address</string>
    <string name="change_displayname">New Display Name</string>
    <string name="change_password">Password</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="change">Change</string>
    <string name="new_email">New email address</string>
    <string name="new_password">New password</string>
    <string name="logout">Log out</string>
    <string name="dialog_unsubscribe">Unsubscribing will delete your account and all personal
        information. You will not be able to restore your account. Do you still want to
        unsubscribe?</string>
    <string name="use_new_emailadress">Use new emailadress with next sign in</string>
    <string name="use_new_password">Use new password with next sign in</string>

    <!-- Strings related to RecipeFragment -->
    <string name="ingredients">ingredients</string>
    <string name="Ingredients">Ingredients</string>
    <string name="view_directions">View directions</string>

    <!-- Info String -->
    <string name="info">A vegetarian diet has several possitive impacts. Yearly 540 kg CO2-equivalent
        emission is avoided (Hallström, Carlsson-Kanyama and Börjesson, 2014). They daily value used
        in this app is derived from this value: 540/365 = ca. 1.5 kg. As well animals are saved. How
        many is based on the average Dutch meatconsumption pp per year / days = 76.8kg/365 = 0.2kg day
        (CBS, 2016). This app uses chicken as unit of measure, because 1 chicken \'gives\' 1 kg of meat.
        (average slaughter weight / 2, since the meat composes ca. half of the animals slaughter
        weight (CBS, 2016)). Therefor every kg of meat not eaten, saves one chicken. If you are
        interested in how many other animals you saved (beyond the scope of this app):
        1 chicken = 1kg meat = 5 days, 1 sheep = 10.5kg = 21 days, 1 pig = 47.5kg = 238 days,
        1 calf = 78kg = 390 days, 1 horse = 114.5kg = 578 days, 1 cow = 155.5kg = 778 days.
        So lets say you ate 1000 days vegetarian, then you saved: 1000/5 = 200 chicken OR
        1 cow (1000/778=1.2 thus 1000-778 = 222 days left), 10 sheep (222/21=10.5 thus 222-(10*21)= 12 days
        left) and 2.4 chicken (12/5=2.4).
        Sources: Hallström, E., Carlsson-Kanyama, A., and Börjesson, P. (2015). Environmental impact
        of dietary change: a systematic review. Journal of Cleaner Production, 91, 1-11. and
        https://opendata.cbs.nl/statline/#/CBS/nl/dataset/7123slac/table?ts=1525770095591.</string>


</resources>
