<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/top_margin"
             android:layout_marginBottom="@dimen/bottom_margin"
             android:layout_marginStart="@dimen/left_margin"
             android:layout_marginEnd="@dimen/right_margin"
             tools:context=".SettingsFragment">

    <LinearLayout
        android:id="@+id/layout_normal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title_activity_settings"/>

        <TextView
            android:id="@+id/change_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:autoLink="web"
            android:text="@string/change_email"/>

        <TextView
            android:id="@+id/change_displayname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:autoLink="web"
            android:text="@string/change_displayname"/>

        <TextView
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:autoLink="web"
            android:text="@string/change_password"/>

        <TextView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:autoLink="web"
            android:text="@string/logout"/>

    </LinearLayout>

    <TextView
        android:id="@+id/unsubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:autoLink="web"
        android:text="@string/unsubscribe"/>

</RelativeLayout>