<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/right_margin"
    tools:context=".ChangeEmailFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/change_email"/>

    <EditText
        android:id="@+id/ET_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/BUTTON_change_email"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change"
        android:textStyle="bold"/>

</LinearLayout>