<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle">

        <RelativeLayout
            android:id="@+id/RelativeLayoutHome1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/TV_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/question"/>

            <TextView
                android:id="@+id/TV_clicked_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:text="@string/clicked_yes"/>

            <TextView
                android:id="@+id/TV_clicked_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:text="@string/clicked_no"/>

            <Button
                android:id="@+id/button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TV_question"
                android:layout_alignStart="@id/TV_question"
                android:padding="4dp"
                android:text="@string/yes"/>

            <Button
                android:id="@+id/button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TV_question"
                android:layout_alignEnd="@id/TV_question"
                android:padding="4dp"
                android:text="@string/no"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TV_daily_recipes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:text="@string/daily_recommendations"/>

            <TextView
                android:id="@+id/TV_yummly_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TV_daily_recipes"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"
                android:clickable="true"
                android:focusable="true"
                android:autoLink="web"
                android:textSize="12sp"
                android:text="soup recipes: search powered by Yummly"/>

            <ImageView
                android:id="@+id/IV_yummly_logo"
                android:layout_below="@id/TV_yummly_search"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"/>

            <ImageView
                android:id="@+id/IV_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <GridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="2"
                android:layout_gravity="center"
                android:horizontalSpacing="0dp"
                android:verticalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:layout_below="@+id/IV_yummly_logo"
                android:layout_marginBottom="16dp">
            </GridView>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>